--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="header-content">
             <!-- Foto de perfil -->
-            <img src="Imagens/Foto de perfil.jpg" alt="Foto de perfil" class="foto-perfil">
+            <img src="Foto de perfil.jpg" alt="Foto de perfil" class="foto-perfil">
             <h1>Felipe Baba Teixeira</h1>
         </div>
         <nav>
@@ -39,7 +39,7 @@
         <h2>Projetos</h2>
         
         <div class="projeto">
-            <img src="Imagens/Café e Conforto.png" alt="Imagem do Projeto 1" class="imagem-projeto">
+            <img src="Café e Conforto.png" alt="Imagem do Projeto 1" class="imagem-projeto">
             <div class="projeto-detalhes">
                 <h3>Projeto Café e Conforto</h3>
                 <p>"Café e Conforto" é um site aconchegante e intuitivo para uma cafeteria,
@@ -48,7 +48,7 @@
         </div>
         
         <div class="projeto">
-            <img src="Imagens/Queen.png" alt="Imagem do Projeto 2" class="imagem-projeto">
+            <img src="Queen.png" alt="Imagem do Projeto 2" class="imagem-projeto">
             <div class="projeto-detalhes">
                 <h3>Projeto Banda Queen</h3>
                 <p>Um site dedicado à lendária banda Queen, apresentando a biografia, discografia, 
